# Modern-AI-Log-Filter-Training

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  Makefile  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  final-proposal.txt  proposal-corrections.md  pyproject.toml  requirements-api.txt  requirements.txt
.github/workflows/: cd.yml  ci.yml
.kaggle_runs/biencoder_full/: kaggle_train_biencoder.ipynb  kernel-metadata.json
.kaggle_runs/biencoder_full_diag/: kaggle_train_biencoder.ipynb  kernel-metadata.json
.kaggle_runs/biencoder_sampled/: kernel-metadata.json
.kaggle_runs/biencoder_smoke/: kaggle_train_biencoder.ipynb  kernel-metadata.json
.kaggle_runs/cross_encoder_full/: kaggle_train_cross_encoder.ipynb  kernel-metadata.json
.kaggle_runs/diag_kernel/: diag_kernel.ipynb  kernel-metadata.json
.kaggle_runs/ner_full/: kaggle_train_ner.ipynb  kernel-metadata.json
config/: alertmanager.yml  config.yaml  mitre_techniques.json  prometheus.yml
config/nginx/: nginx.conf
config/prometheus/: alerts.yml
config/sigma_rules/: README.md
docker/api/: Dockerfile
docker/archive/: Dockerfile
docker/collector/: Dockerfile
docker/nginx/: Dockerfile
docker/router/: Dockerfile
docs/: OPERATIONS.md
k8s/: README.md  api-canary.yaml  api.yaml  archive.yaml  collector.yaml  configmap.yaml  ingress.yaml  namespace.yaml  network-policies.yaml  pdb.yaml  probe.py  pvc.yaml  router.yaml  secret.yaml
models/: model_manifest.json
notebooks/: KAGGLE_TIER2_GUIDE.md  MODEL_SELECTION.md  README.md  kaggle_pretrain_mlm.ipynb  kaggle_train_biencoder.ipynb  kaggle_train_classifier.ipynb  kaggle_train_cross_encoder.ipynb  kaggle_train_ner.ipynb  kaggle_train_transformer.ipynb  kaggle_train_transformer_READY.ipynb  kernel-metadata.json
scripts/: AGENTS.md  benchmark.py  benchmark_local.py  convert_witfoo_to_jsonl.py  demo_scoring.py  download_hf_models.py  es_backup.sh  es_restore.sh  eval_dataset.csv  evaluate_detection.py  evaluate_model_production.py  evaluate_tier2_thresholds.py  load_test_pipeline.py  model_manifest.py  per_model_benchmark.py  promote_model.py  score_witfoo_demo.py  setup_es_ilm.sh  smoke_test_pipeline.py  smoke_test_real_scorer.py  throughput_benchmark.py  validate_real_syslog.py  verify_biencoder_notebook.py  verify_ner_notebook.py  verify_tier2_artifact.py
scripts/certs/: generate.sh  generate_services_tls.sh
src/logfilter/: AGENTS.md  __init__.py  archive_consumer.py  (+4 more)
tests/: AGENTS.md  test_api_app.py  test_api_security.py  test_archive.py  test_archive_consumer.py  test_benchmark.py  test_biencoder.py  test_build_reproducibility.py  test_circuit_breaker.py  test_classifier.py  test_collector.py  test_config.py  test_deploy_ha_config.py  test_dockerfile_api.py  test_download_hf_models.py  test_drift_detector.py  test_enricher.py  test_evaluate_model_production.py  test_events.py  test_k8s_deploy_contract.py  test_k8s_manifests.py  test_kafka_config.py  test_kafka_consumer.py  test_kafka_producer.py  test_kafka_router.py  test_lifecycle_shutdown.py  test_model_registry.py  test_model_wrappers.py  test_network_security.py  test_normalizer.py  test_novelty_detector.py  test_observability_config.py  test_redaction.py  test_requirements_api.py  test_router_pipeline.py  test_scorer.py  test_sigma_cache_path_unused.py  test_syslog_classifier.py  test_telemetry.py  test_thresholds.py  (+2 more)
training/: AGENTS.md  data_loader.py  evaluate.py  generate_syslog_data.py  retrain_syslog_sparse.py  retrain_syslog_witfoo.py  retrain_with_syslog.py  text_dataset.py  thresholds.py  train.py  train_syslog_classifier.py  train_transformer.py
(+63 files in other folders)
