[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logfilter"
version = "0.1.0"
description = "AI-powered log preprocessing layer for IBM QRadar SIEM"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.8.0",
    "transformers>=5.0.0",
    "sentence-transformers>=5.4.1",
    "onnxruntime>=1.18.0",
    "onnx>=1.21.0",
    "onnxmltools>=1.12.0",
    "skl2onnx>=1.17.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.5.0",
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "faiss-cpu>=1.8.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "kafka-python>=2.0.2",
    "elasticsearch>=8.13.0",
    "prometheus-client>=0.20.0",
    "sigma-cli>=1.0.0",
    "pysigma>=0.11.0",
    "python-dotenv>=1.2.2",
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "structlog>=24.1.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "tqdm>=4.66.3",
    "PyYAML>=6.0.1",
    "python-json-logger>=2.0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "pip-audit>=2.7.3",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
branch = true
source = ["src/logfilter"]

[tool.coverage.report]
fail_under = 90
show_missing = true
skip_covered = true
